kubernetes/turing/media/bookorbit/app/cnp.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bookorbit-cross-cluster
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bookorbit
      app.kubernetes.io/controller: bookorbit
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.cluster: raspberry
            io.kubernetes.pod.namespace: kube-system
            k8s-app: cilium
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.cluster: raspberry
            io.kubernetes.pod.namespace: network
            app.kubernetes.io/name: smtp-relay
      toPorts:
        - ports:
            - port: "25"
              protocol: TCP
